@@ -1,5 +1,6 @@
 From version 0.5.0 to 0.5.1
 - out-of-band instant messaging re-architected, ultimately multi-nodal.
+- call source referencing by request uri rather than resolved interface.
 
 From version 0.4.7 to 0.5.0
 - static routing tables with re-write rules and inter-node call support.
